added one more line

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>this is the first bootcamp index.html assignment and deploy with surge </h1>
+    <h1>now i add one more line in this index.html file and lets see surge automatically deploy my page on globally</h1>
 </body>
 </html>
